[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Objects/ShrinkStop/ShrinkStop.gd" type="Script" id=1]
[ext_resource path="res://src/Objects/ShrinkStop/sprite.png" type="Texture" id=2]
[ext_resource path="res://src/Objects/HPPickup/Vanish_anim.tres" type="Animation" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 16.0

[node name="ShrinkStop" type="Area2D" index="0"]

modulate = Color( 0, 0.835938, 1, 1 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Visibility" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="LifetimeTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/vanish = ExtResource( 3 )
blend_times = [  ]

[connection signal="body_entered" from="." to="." method="_on_ShrinkStop_body_entered"]

[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


